--- a/personal-organizer/package.json
+++ b/personal-organizer/package.json
@@ -19,6 +19,7 @@
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/checkbox": "^0.5.17",
     "@react-navigation/native": "^6.0.2",
+    "@shopify/react-native-skia": "1.2.3",
     "expo": "~51.0.28",
     "expo-constants": "~16.0.2",
     "expo-dev-client": "~4.0.27",
