--- a/personal-organizer/package.json
+++ b/personal-organizer/package.json
@@ -20,13 +20,13 @@
     "@react-native-community/checkbox": "^0.5.17",
     "@react-navigation/native": "^6.0.2",
     "@shopify/react-native-skia": "1.2.3",
-    "expo": "~51.0.28",
+    "expo": "~51.0.39",
     "expo-constants": "~16.0.2",
-    "expo-dev-client": "~4.0.27",
+    "expo-dev-client": "~4.0.29",
     "expo-font": "~12.0.9",
     "expo-linking": "~6.3.1",
-    "expo-router": "~3.5.23",
-    "expo-splash-screen": "~0.27.5",
+    "expo-router": "~3.5.24",
+    "expo-splash-screen": "~0.27.7",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
@@ -35,6 +35,7 @@
     "react-hook-form": "^7.53.2",
     "react-native": "0.74.5",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-graph": "^1.1.0",
     "react-native-mmkv": "2.12.1",
     "react-native-paper": "^5.12.5",
     "react-native-reanimated": "~3.10.1",
