--- a/personal-organizer/package.json
+++ b/personal-organizer/package.json
@@ -34,6 +34,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.53.2",
     "react-native": "0.74.5",
+    "react-native-element-dropdown": "^2.12.2",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-graph": "^1.1.0",
     "react-native-mmkv": "2.12.1",
