added daily reminder option

--- a/personal-organizer/android/settings.gradle
+++ b/personal-organizer/android/settings.gradle
@@ -44,7 +44,7 @@ if (getRNMinorVersion() >= 75) {
   }
 }
 
-rootProject.name = 'personal-organizer'
+rootProject.name = 'Personal Organizer'
 
 dependencyResolutionManagement {
   versionCatalogs {
