--- a/personal-organizer/app.json
+++ b/personal-organizer/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
     "newArchEnabled": true,
-    "name": "personal-organizer",
+    "name": "Personal Organizer",
     "slug": "personal-organizer",
     "version": "1.0.0",
     "orientation": "portrait",
@@ -33,7 +33,8 @@
       "favicon": "./assets/images/favicon.png"
     },
     "plugins": [
-      "expo-router"
+      "expo-router",
+      "expo-notifications"
     ],
     "experiments": {
       "typedRoutes": true
