--- a/personal-organizer/package.json
+++ b/personal-organizer/package.json
@@ -25,6 +25,7 @@
     "expo-dev-client": "~4.0.29",
     "expo-font": "~12.0.9",
     "expo-linking": "~6.3.1",
+    "expo-notifications": "~0.28.19",
     "expo-router": "~3.5.24",
     "expo-splash-screen": "~0.27.7",
     "expo-status-bar": "~1.12.1",
@@ -36,6 +37,7 @@
     "react-hook-form": "^7.53.2",
     "react-native": "0.74.5",
     "react-native-calendars": "^1.1308.1",
+    "react-native-date-picker": "^5.0.10",
     "react-native-element-dropdown": "^2.12.2",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-graph": "^1.1.0",
@@ -44,8 +46,7 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.10",
-    "expo-notifications": "~0.28.19"
+    "react-native-web": "~0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
