reverted attempt to update to expo sdk 52

--- a/personal-organizer/app.json
+++ b/personal-organizer/app.json
@@ -34,7 +34,8 @@
     },
     "plugins": [
       "expo-router",
-      "expo-notifications"
+      "expo-notifications",
+      "expo-font"
     ],
     "experiments": {
       "typedRoutes": true
