--- a/personal-organizer/package.json
+++ b/personal-organizer/package.json
@@ -24,6 +24,7 @@
     "expo-constants": "~16.0.2",
     "expo-dev-client": "~4.0.29",
     "expo-font": "~12.0.9",
+    "expo-linear-gradient": "~13.0.2",
     "expo-linking": "~6.3.1",
     "expo-notifications": "~0.28.19",
     "expo-router": "~3.5.24",
@@ -40,12 +41,14 @@
     "react-native-date-picker": "^5.0.10",
     "react-native-element-dropdown": "^2.12.2",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-gifted-charts": "^1.4.61",
     "react-native-graph": "^1.1.0",
     "react-native-mmkv": "2.12.1",
     "react-native-paper": "^5.13.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
+    "react-native-svg": "14.1.0",
     "react-native-web": "~0.19.10"
   },
   "devDependencies": {
